[package]
name = "artisan-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
artisan-core = { path = "../../libs/artisan-core" }
artisan-pcgen = { path = "../../libs/artisan-pcgen" }
artisan-toml = { path = "../../libs/artisan-toml" }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
